--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,22 @@
 <body>
 
 <h1>This is Index page</h1>
+<script src="/socket.io/socket.io.js"></script>
+<script>
+    var socket=io();
+
+    socket.on('connect',()=>{
+       console.log("connected to server");
+
+    });
+
+    socket.on('disconnect',()=>{
+        console.log("disconnected to server");
+
+    });
+
+
+</script>
 
 </body>
 </html>
