--- a/public/index.html
+++ b/public/index.html
@@ -8,18 +8,9 @@
 
 <h1>This is Index page</h1>
 <script src="/socket.io/socket.io.js"></script>
+<script src="/js/index.js"></script>
 <script>
-    var socket=io();
 
-    socket.on('connect',()=>{
-       console.log("connected to server");
-
-    });
-
-    socket.on('disconnect',()=>{
-        console.log("disconnected to server");
-
-    });
 
 
 </script>
