--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
-<body>
 
-<h1>This is Index page</h1>
+<p>Welcome to chat app</p>
+
+<ol  id="messages"></ol>
+
+<form id="message-form">
+
+    <input id="message" type="text" placeholder="Message"/>
+    <button>Send</button>
+
+</form>
+
 <script src="/socket.io/socket.io.js"></script>
+<script src="./js/libs/jquery-3.2.1.min.js"></script>
 <script src="/js/index.js"></script>
 <script>
 
