--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Home</title>
 </head>
 
-<p>Welcome to chat app</p>
+<body class="chat">
 
-<ol  id="messages"></ol>
+    <div class="chat__sidebar">
 
-<form id="message-form">
+        <h3>People</h3>
+        <div id="users"></div>
 
-    <input id="message" type="text" placeholder="Message"/>
-    <button>Send</button>
+    </div>
 
-</form>
+    <div class="chat__main">
+
+        <ol  id="messages" class="chat__messages"></ol>
+
+        <div class="chat__footer">
+            <form id="message-form">
+                <input id="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
+                <button>Send</button>
+            </form>
+            <button id="sendlocation">Send Location</button>
+        </div>
+
+
+    </div>
+
+
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="./js/libs/jquery-3.2.1.min.js"></script>
+<script src="./js/libs/moment.js"></script>
 <script src="/js/index.js"></script>
 <script>
 
